--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -2,10 +2,10 @@
     /* margin-bottom: 0;
     margin-top: 40px;
     margin-left: 0; */
-    width: 100%;
+    /* width: 100%; */
     height: 40px;
     text-align: center;
-    padding: 10px;
+    /* padding: 10px; */
     border-top: 1px solid #c2c2c2;
     /* background-color: rgb(239, 239, 239); */
     
@@ -20,8 +20,8 @@
   
   .footer-container .inner-content {
     display: flex;
-    width: 100%;
-    margin: 4px auto;
+    /* width: 100%; */
+    /* margin: 4px auto; */
   }
 
   .account-link {
